Update spacing issue with the EmbededVideo components

--- a/client/src/components/EmbededVideo.scss
+++ b/client/src/components/EmbededVideo.scss
@@ -1,4 +1,5 @@
 .video__wrapper {
+  text-align: center;
   margin: 1em 0;
 
   @media screen and (max-width: 400px) {
