--- a/client/src/container/Release/Release.scss
+++ b/client/src/container/Release/Release.scss
@@ -5,8 +5,14 @@
   justify-content: center;
   align-items: center;
 
+  .app__release-item {
+    margin: 1rem auto;
+  }
+  
   p {
-    font-size: 20px;
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
   }
 
   a {
